[gd_scene load_steps=16 format=3 uid="uid://o6g61xdkjii0"]

[ext_resource type="Script" uid="uid://c800bmkdk4mjs" path="res://examples/inventory_grid_stacked_transfer.gd" id="1_yjyyb"]
[ext_resource type="Script" uid="uid://cm5oc1d3u0vv2" path="res://addons/gloot/ui/ctrl_inventory_grid.gd" id="2_ptyr5"]
[ext_resource type="Script" uid="uid://vwb4minj3jkb" path="res://addons/gloot/ui/ctrl_item_slot.gd" id="6_wlx5u"]
[ext_resource type="JSON" path="res://tests/data/protoset_grid.json" id="8_mr2pf"]
[ext_resource type="Script" uid="uid://3jcgm8004upx" path="res://addons/gloot/core/inventory.gd" id="9_a6m37"]
[ext_resource type="Script" uid="uid://dxin1l32oqvqv" path="res://addons/gloot/core/constraints/grid_constraint.gd" id="10_6njuc"]
[ext_resource type="Script" uid="uid://bcu5wrau0gype" path="res://addons/gloot/core/item_slot.gd" id="10_lyc83"]

[sub_resource type="StyleBoxTexture" id="1"]
region_rect = Rect2(0, 0, 32, 32)

[sub_resource type="StyleBoxTexture" id="2"]
region_rect = Rect2(0, 0, 32, 32)

[sub_resource type="StyleBoxFlat" id="5"]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 0.92549, 0.152941, 1)

[sub_resource type="StyleBoxTexture" id="3"]
region_rect = Rect2(0, 0, 32, 32)

[sub_resource type="StyleBoxTexture" id="4"]
region_rect = Rect2(0, 0, 32, 32)

[sub_resource type="StyleBoxFlat" id="6"]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 0.92549, 0.152941, 1)

[sub_resource type="StyleBoxTexture" id="7"]
region_rect = Rect2(0, 0, 32, 32)

[sub_resource type="StyleBoxTexture" id="8"]
region_rect = Rect2(0, 0, 32, 32)

[node name="InventoryGridStackedTransfer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yjyyb")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="CtrlInventoryGridLeft" type="Control" parent="VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer" node_paths=PackedStringArray("inventory")]
unique_name_in_owner = true
texture_filter = 1
custom_minimum_size = Vector2(160, 160)
layout_mode = 2
script = ExtResource("2_ptyr5")
inventory = NodePath("../../../../../InventoryLeft")
field_style = SubResource("1")
field_highlighted_style = SubResource("2")
selection_style = SubResource("5")

[node name="BtnSortLeft" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Sort"

[node name="BtnSplitLeft" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Split"

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="CtrlInventoryGridRight" type="Control" parent="VBoxContainer/HBoxContainer/VBoxContainer2/PanelContainer2" node_paths=PackedStringArray("inventory")]
unique_name_in_owner = true
texture_filter = 1
custom_minimum_size = Vector2(160, 160)
layout_mode = 2
script = ExtResource("2_ptyr5")
inventory = NodePath("../../../../../InventoryRight")
field_style = SubResource("3")
field_highlighted_style = SubResource("4")
selection_style = SubResource("6")

[node name="BtnSortRight" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Sort"

[node name="BtnSplitRight" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Split"

[node name="VBoxContainer3" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
text = "Item Slot:"

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 4

[node name="CtrlItemSlot" type="Control" parent="VBoxContainer/HBoxContainer/VBoxContainer3/PanelContainer" node_paths=PackedStringArray("item_slot")]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
script = ExtResource("6_wlx5u")
item_slot = NodePath("../../../../../ItemSlot")
icon_stretch_mode = 5
slot_style = SubResource("7")
slot_highlighted_style = SubResource("8")

[node name="BtnUnequip" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
text = "Unequip"

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Drag and drop items to transfer them from one inventory to the other.
Press the 'Sort' buttons to sort the inventories.
Press the 'Split' buttons to split the selected stack in half.
Drag items from the right inventory onto the item slot to equip it.
Use the 'Unequip' button to unequip it."

[node name="LblInfo" type="Label" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 14.0

[node name="ItemSlot" type="Node" parent="."]
script = ExtResource("10_lyc83")
protoset = ExtResource("8_mr2pf")

[node name="InventoryLeft" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("9_a6m37")
_serialized_format = {}

[node name="GridConstraint" type="Node" parent="InventoryLeft"]
script = ExtResource("10_6njuc")
size = Vector2i(5, 5)

[node name="InventoryRight" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("9_a6m37")
_serialized_format = {}

[node name="GridConstraint" type="Node" parent="InventoryRight"]
script = ExtResource("10_6njuc")
size = Vector2i(5, 5)
